--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = 'mongodb+srv://admin:Q44U96TsLKb2xchc@cluster0.wouku4o.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URI = 'mongodb+srv://admin:KILLUASHONEN@cluster0.wouku4o.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET = 'JWT TOKEN SECRET HERE'
